--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,17 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.minimal.app">
 
-    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="34" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-<application
-    android:label="AutoAPK"
-    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
-    <activity android:name=".MainActivity" android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-    </activity>
-</application>
+    <application
+        android:label="CITPC Connector"
+        android:usesCleartextTraffic="true">
 
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+
+        <service
+            android:name=".WifiService"
+            android:exported="false"
+            android:foregroundServiceType="connectedDevice"/>
+
+        <receiver
+            android:name=".WifiReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
+    </application>
 </manifest>
+
