--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,25 +2,44 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.minimal.app">
 
+    <uses-sdk
+        android:minSdkVersion="24"
+        android:targetSdkVersion="33" />
+
+    <!-- Network -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
+    <!-- Location is required to read SSID on API 29+ -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+
+    <!-- Foreground service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"/>
 
     <application
-        android:label="CITPC Connector"
+        android:label="Neo_CITPC"
         android:usesCleartextTraffic="true">
 
+        <!-- Main activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
+        <!-- WiFi monitor service (runs in foreground, watches for SSID) -->
         <service
             android:name=".WifiService"
             android:exported="false"
             android:foregroundServiceType="connectedDevice"/>
 
+        <!-- Fallback receiver for connectivity changes (mainly pre-API 28) -->
         <receiver
             android:name=".WifiReceiver"
             android:exported="true">
@@ -31,4 +50,3 @@
 
     </application>
 </manifest>
-
