--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
-    <!-- Foreground service -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"/>
-
-    <!-- Boot receiver -->
+    <!-- Boot + alarm -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:label="Neo_CITPC"
@@ -36,22 +33,16 @@
             </intent-filter>
         </activity>
 
-        <!-- WiFi monitor service -->
-        <service
-            android:name=".WifiService"
-            android:exported="false"
-            android:foregroundServiceType="connectedDevice"/>
-
-        <!-- Connectivity change fallback (pre-API 28) -->
+        <!-- Alarm-driven WiFi checker — fires every 30s, checks SSID, notifies if CITPC -->
         <receiver
-            android:name=".WifiReceiver"
-            android:exported="true">
+            android:name=".WifiCheckReceiver"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="com.minimal.app.WIFI_CHECK"/>
             </intent-filter>
         </receiver>
 
-        <!-- Boot receiver — starts WifiService after reboot -->
+        <!-- Boot receiver — starts the repeating alarm after reboot -->
         <receiver
             android:name=".BootReceiver"
             android:exported="false">
